--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,6 +33,7 @@
         <canvas id="canvas"></canvas>
         <div class="btn clear">Очистить</div>
         <div class="btn recognize">Распознать</div>
+        <div class="btn correct">Корректировать</div>
         <div id="mini-result"></div>
     </div>
 </div>
